--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SUPER GALACTIC AGE CALCULATOR</title>
 </head>
 <body>
-  
+  <div class="container">
+  <h1>SUPER GALACTIC AGE CALCULATOR</h1>
+    <form id="intake">
+      <label>How old are you in total years?</label>
+      <input type="number" id="age" min="1" max="125">
+      <label>What do you think your life expectancy is?</label>
+      <input type="number" id="lifeEx" min="1" max="125"><br>
+      <button type="submit" class="btn btn-dark">SUBMIT</button>
+    </form>
+  </container>
 </body>
 </html>
