use a for loop to add all planet age calculations and their corresponding planet to the DOM.

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,14 @@
       <input type="number" id="lifeEx" min="1" max="125"><br>
       <button type="submit" class="btn btn-dark">SUBMIT</button>
     </form>
+    <div id="output">
+      <h2>Intergalactic Ages:</h2>
+      <ul id="ageList">
+      </ul>
+      <h2>Intergalactic Life Expectancies:</h2>
+      <ul id="exesList">
+      </ul>
+    </div>
   </container>
 </body>
 </html>
