--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,23 @@
   <h1>SUPER GALACTIC AGE CALCULATOR</h1>
     <form id="intake">
       <h4>How old are you in total years?</h4>
-      <input type="number" class="form-control" id="age" min="1" max="125">
+      <input type="number" class="form-control" id="age" min="1" max="125" required>
       <h4>What gender do you identify as?</h4>
-      <input type="radio" name="gender" value="male">
+      <input type="radio" name="gender" value="male" required>
           <label>Male</label>
-        <input type="radio" name="gender" value="female">
+        <input type="radio" name="gender" value="female" required>
           <label>Female</label>
-        <input type="radio" name="gender" value="other">
+        <input type="radio" name="gender" value="other" required>
           <label>Other</label>
       <br>
       <button type="submit" class="btn btn-dark">SUBMIT</button>
     </form>
     <br>
     <div id="output">
-      <h2>Intergalactic Ages:</h2>
+      <h2>Galactic Ages:</h2>
       <ul id="ageList">
       </ul>
-      <h2>Intergalactic Life Expectancies:</h2>
+      <h2>Galactic Life Expectancies:</h2>
       <ul id="exesList">
       </ul>
     </div>
